@@ -1,7 +1,8 @@
 3.4
  * Add nodetool gettimeout and settimeout commands (CASSANDRA-10953)
  * Add 3.0 metadata to sstablemetadata output (CASSANDRA-10838)
-
+Merged from 2.2:
+ * Check keyspace existence on RepairMessageVerbHandler (CASSANDRA-11014)
 
 3.3
 Merged from 3.0:
